--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 
+{% for msg in get_flashed_messages() %}
+<p>{{ msg }}</p>
+{% endfor %}
+
+
 {% for pet in pets %}
 
 {% if pet.photo_url %}
@@ -17,6 +22,10 @@
 {% if pet.available %}
 <b>Available</b>
 {% endif %}
+
+<form action="/{{ pet.id }}">
+  <button>Edit Pet</button>
+</form>
 
 {% endfor %}
 <form action="/add">
